routing, header changes, module fixes and additions

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -2,7 +2,7 @@
     <button (click)="toggleSidenav()" mat-icon-button class="example-icon">
       <mat-icon>menu</mat-icon>
     </button>
-    <a class="logo" href="#">
+    <a class="logo" href="/dashboard">
         <img src="assets/images/navLogo.jpeg" width="25px" height="35px" />
     </a>
   </mat-toolbar>
