sidenav link fix

--- a/src/app/components/sidenav/sidenav.component.html
+++ b/src/app/components/sidenav/sidenav.component.html
@@ -3,7 +3,7 @@
 
         <section class="navGroup">
             <label class="navGroupLabel">Navigation</label>
-            <a class="navButton" mat-button color="primary" href="/">
+            <a class="navButton" mat-button color="primary" href="/dashboard">
                 <mat-icon>home</mat-icon>
                 <label>Dashboard</label>
             </a>
