added auth components, users auth base service

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -2,7 +2,7 @@
     <button (click)="toggleSidenav()" mat-icon-button class="example-icon">
       <mat-icon>menu</mat-icon>
     </button>
-    <a class="logo" href="/dashboard">
+    <a href="/dashboard">
         <img src="assets/images/navLogo.jpeg" width="20px" height="25px" />
     </a>
   </mat-toolbar>
