--- a/src/app/components/sidenav/sidenav.component.html
+++ b/src/app/components/sidenav/sidenav.component.html
@@ -9,6 +9,14 @@
             </a>
         </section>
 
+        <section class="navGroup">
+            <label class="navGroupLabel">Settings</label>
+            <a class="navButton" mat-button color="primary" (click)="logout()">
+                <mat-icon>logout</mat-icon>
+                <label>Log Out</label>
+            </a>
+        </section>
+
         <!-- <section class="navGroup">
             <label class="navGroupLabel">Some Nav</label>
             <a class="navButton" mat-button color="primary" href="/some">
