added css for the new team modal and the dashboard

--- a/src/app/components/modals/new-team-component/new-team-component.component.html
+++ b/src/app/components/modals/new-team-component/new-team-component.component.html
@@ -1,4 +1,4 @@
-<h1 mat-dialog-title>Auto toevoegen</h1>
+<h1 mat-dialog-title>New Team</h1>
 <div mat-dialog-content>
     <form [formGroup]="formGroupTeam">
         <mat-form-field class="input-field">
